fix(card): fix card actions content alignment in vertical orientation.

--- a/src/components/card/themes/card.actions.base.scss
+++ b/src/components/card/themes/card.actions.base.scss
@@ -21,6 +21,10 @@
     }
 }
 
+:host([orientation='vertical']) {
+    justify-content: space-around;
+}
+
 ::slotted([slot='start']) {
     display: flex;
     align-items: center;
